# cpp-tensor-library

./: CMakeLists.txt  README.md
include/Merlot/: memory.hpp  types.hpp
tests/: test_memory.cpp
